[gd_scene load_steps=34 format=3 uid="uid://b4prfxi5j7xur"]

[ext_resource type="Texture2D" uid="uid://mxwo05ou7nlw" path="res://scene/generator/sprite/gen1.png" id="1_kdblc"]
[ext_resource type="Script" uid="uid://c56ht8hmhwo0y" path="res://scene/generator/generator.gd" id="1_plp2v"]
[ext_resource type="Texture2D" uid="uid://bjtenyfw82c3w" path="res://scene/generator/sprite/gen2.png" id="2_plp2v"]
[ext_resource type="Texture2D" uid="uid://co47w4e4p801p" path="res://scene/generator/sprite/gen3.png" id="3_ca0l4"]
[ext_resource type="Texture2D" uid="uid://cen581gjqigia" path="res://scene/generator/sprite/laser_ui.png" id="4_b5xoo"]
[ext_resource type="Texture2D" uid="uid://dralw3ucnabm1" path="res://scene/generator/sprite/gen4.png" id="4_jccku"]
[ext_resource type="Texture2D" uid="uid://bitg233xr7ute" path="res://scene/generator/sprite/gen5.png" id="5_b5xoo"]
[ext_resource type="Texture2D" uid="uid://dkwi51rwkjeuo" path="res://scene/coins/sprite/resh.png" id="5_jccku"]
[ext_resource type="Texture2D" uid="uid://b3cbu7wlom7l5" path="res://scene/generator/sprite/res_ui.png" id="5_plp2v"]
[ext_resource type="Texture2D" uid="uid://dr057skx0m0i7" path="res://scene/generator/sprite/gen6.png" id="6_dufph"]
[ext_resource type="Texture2D" uid="uid://dbk0voww8uqc0" path="res://scene/generator/sprite/turret_ui.png" id="6_ewm5t"]
[ext_resource type="Script" uid="uid://bndcn7nq6x3q5" path="res://scene/generator/control.gd" id="12_ca0l4"]
[ext_resource type="Shader" uid="uid://cgdvld361dd5t" path="res://scene/main/glitch.gdshader" id="13_jccku"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_c8nle"]
bg_color = Color(0, 0, 0, 0.878431)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(1, 1, 1, 1)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
anti_aliasing = false

[sub_resource type="ShaderMaterial" id="ShaderMaterial_b5xoo"]
shader = ExtResource("13_jccku")
shader_parameter/shake_power = 0.002
shader_parameter/shake_rate = 1.0
shader_parameter/shake_speed = 5.0
shader_parameter/shake_block_size = 30.5
shader_parameter/shake_color_rate = 0.001

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_jccku"]

[sub_resource type="Theme" id="Theme_ewm5t"]
Button/styles/focus = SubResource("StyleBoxEmpty_jccku")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_plp2v"]
bg_color = Color(0, 0, 0, 0.878431)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.99558, 0.99558, 0.99558, 1)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
anti_aliasing = false

[sub_resource type="ShaderMaterial" id="ShaderMaterial_dufph"]
shader = ExtResource("13_jccku")
shader_parameter/shake_power = 0.002
shader_parameter/shake_rate = 1.0
shader_parameter/shake_speed = 5.0
shader_parameter/shake_block_size = 30.5
shader_parameter/shake_color_rate = 0.001

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ca0l4"]
bg_color = Color(0, 0, 0, 0.878431)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(1, 1, 1, 1)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
anti_aliasing = false

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ewm5t"]
shader = ExtResource("13_jccku")
shader_parameter/shake_power = 0.002
shader_parameter/shake_rate = 1.0
shader_parameter/shake_speed = 5.0
shader_parameter/shake_block_size = 30.5
shader_parameter/shake_color_rate = 0.001

[sub_resource type="ShaderMaterial" id="ShaderMaterial_jccku"]

[sub_resource type="SpriteFrames" id="SpriteFrames_yybav"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_kdblc")
}, {
"duration": 1.0,
"texture": ExtResource("2_plp2v")
}, {
"duration": 1.0,
"texture": ExtResource("3_ca0l4")
}, {
"duration": 1.0,
"texture": ExtResource("4_jccku")
}, {
"duration": 1.0,
"texture": ExtResource("5_b5xoo")
}, {
"duration": 1.0,
"texture": ExtResource("6_dufph")
}],
"loop": false,
"name": &"buid_up",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_kdblc")
}],
"loop": false,
"name": &"idle",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kdblc"]
size = Vector2(64, 64)

[sub_resource type="CircleShape2D" id="CircleShape2D_opvtb"]
radius = 27.5386

[sub_resource type="RectangleShape2D" id="RectangleShape2D_plp2v"]
size = Vector2(28.4522, 28.8316)

[sub_resource type="Animation" id="Animation_dufph"]
resource_name = "card_pull_1"
length = 5.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Control/HBoxContainer/LaserDamage:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}

[sub_resource type="Animation" id="Animation_ewm5t"]
resource_name = "card_pull_2"
length = 5.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Control/HBoxContainer/TurretDamage:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}

[sub_resource type="Animation" id="Animation_ln4xp"]
resource_name = "card_pull_3"
length = 5.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Control/HBoxContainer/OreAmount:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}

[sub_resource type="Animation" id="Animation_jccku"]
resource_name = "shop_in"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Control/HBoxContainer:size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.466667),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(92, 32), Vector2(92, 32)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Control/HBoxContainer:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.466667),
"transitions": PackedFloat32Array(1.86607, 1),
"update": 0,
"values": [Vector2(-33, 48.085), Vector2(-33, 9)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Control/HBoxContainer:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.466667),
"transitions": PackedFloat32Array(1.8025, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Control/HBoxContainer:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.133333),
"transitions": PackedFloat32Array(1.51572, 1.51572),
"update": 1,
"values": [false, true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_dufph"]
_data = {
&"card_pull_1": SubResource("Animation_dufph"),
&"card_pull_2": SubResource("Animation_ewm5t"),
&"card_pull_3": SubResource("Animation_ln4xp"),
&"shop_in": SubResource("Animation_jccku")
}

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jccku"]
bg_color = Color(0.286275, 0.0509804, 0.407843, 0.235294)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_b5xoo"]
bg_color = Color(0.816454, 0.498, 0.50454, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.654056, 0.621038, 0.9866, 1)
border_blend = true
corner_radius_top_left = 1
corner_radius_top_right = 1
corner_radius_bottom_right = 1
corner_radius_bottom_left = 1
anti_aliasing = false

[node name="Generator" type="StaticBody2D" groups=["ally"]]
collision_layer = 34
script = ExtResource("1_plp2v")

[node name="Control" type="Control" parent="."]
z_index = 1
layout_mode = 3
anchors_preset = 0
offset_left = -25.0
offset_top = -119.0
offset_right = 27.0
offset_bottom = -70.0
scale = Vector2(2, 2)
script = ExtResource("12_ca0l4")

[node name="HBoxContainer" type="HBoxContainer" parent="Control"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -59.0
offset_top = -15.5
offset_right = 33.0
offset_bottom = 24.5
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(45.11, 15.5)
theme_override_constants/separation = 10
alignment = 1

[node name="LaserDamage" type="PanelContainer" parent="Control/HBoxContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_c8nle")

[node name="Glich" type="ColorRect" parent="Control/HBoxContainer/LaserDamage"]
z_index = 1000
material = SubResource("ShaderMaterial_b5xoo")
layout_mode = 2

[node name="Button" type="Button" parent="Control/HBoxContainer/LaserDamage"]
layout_mode = 2
theme = SubResource("Theme_ewm5t")
theme_override_font_sizes/font_size = 4
text = "Laser
Damage
x2"

[node name="MarginContainer2" type="MarginContainer" parent="Control/HBoxContainer/LaserDamage/Button"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
theme_override_constants/margin_left = 7
theme_override_constants/margin_top = 2

[node name="TextureRect" type="TextureRect" parent="Control/HBoxContainer/LaserDamage/Button/MarginContainer2"]
custom_minimum_size = Vector2(10, 7)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
texture = ExtResource("4_b5xoo")
expand_mode = 1

[node name="MarginContainer" type="MarginContainer" parent="Control/HBoxContainer/LaserDamage/Button"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 2
theme_override_constants/margin_top = 2
theme_override_constants/margin_right = 2
theme_override_constants/margin_bottom = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Control/HBoxContainer/LaserDamage/Button/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 1

[node name="Icon" type="TextureRect" parent="Control/HBoxContainer/LaserDamage/Button/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(6, 5)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 8
texture = ExtResource("5_jccku")
expand_mode = 1

[node name="Price" type="Label" parent="Control/HBoxContainer/LaserDamage/Button/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_vertical = 8
theme_override_font_sizes/font_size = 3
text = "1"

[node name="TurretDamage" type="PanelContainer" parent="Control/HBoxContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_plp2v")

[node name="Glich" type="ColorRect" parent="Control/HBoxContainer/TurretDamage"]
z_index = 1000
material = SubResource("ShaderMaterial_dufph")
layout_mode = 2

[node name="Button2" type="Button" parent="Control/HBoxContainer/TurretDamage"]
layout_mode = 2
theme = SubResource("Theme_ewm5t")
theme_override_font_sizes/font_size = 4
text = "Turret
Damage
x2"

[node name="MarginContainer2" type="MarginContainer" parent="Control/HBoxContainer/TurretDamage/Button2"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
theme_override_constants/margin_left = 7
theme_override_constants/margin_top = 2

[node name="TextureRect" type="TextureRect" parent="Control/HBoxContainer/TurretDamage/Button2/MarginContainer2"]
custom_minimum_size = Vector2(10, 7)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
texture = ExtResource("6_ewm5t")
expand_mode = 1

[node name="MarginContainer" type="MarginContainer" parent="Control/HBoxContainer/TurretDamage/Button2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 2
theme_override_constants/margin_top = 2
theme_override_constants/margin_right = 2
theme_override_constants/margin_bottom = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Control/HBoxContainer/TurretDamage/Button2/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 1

[node name="Icon" type="TextureRect" parent="Control/HBoxContainer/TurretDamage/Button2/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(6, 5)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 8
texture = ExtResource("5_plp2v")
expand_mode = 1

[node name="Price" type="Label" parent="Control/HBoxContainer/TurretDamage/Button2/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_vertical = 8
theme_override_font_sizes/font_size = 3
text = "1"

[node name="OreAmount" type="PanelContainer" parent="Control/HBoxContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_ca0l4")

[node name="Glich" type="ColorRect" parent="Control/HBoxContainer/OreAmount"]
z_index = 1000
material = SubResource("ShaderMaterial_ewm5t")
layout_mode = 2

[node name="Button3" type="Button" parent="Control/HBoxContainer/OreAmount"]
layout_mode = 2
theme = SubResource("Theme_ewm5t")
theme_override_font_sizes/font_size = 4
text = "
Amount
Of 
Ore
x2
"

[node name="MarginContainer2" type="MarginContainer" parent="Control/HBoxContainer/OreAmount/Button3"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
theme_override_constants/margin_left = 7
theme_override_constants/margin_top = 2

[node name="TextureRect" type="TextureRect" parent="Control/HBoxContainer/OreAmount/Button3/MarginContainer2"]
custom_minimum_size = Vector2(10, 7)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
size_flags_stretch_ratio = 0.0
texture = ExtResource("5_plp2v")
expand_mode = 1

[node name="MarginContainer" type="MarginContainer" parent="Control/HBoxContainer/OreAmount/Button3"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 2
theme_override_constants/margin_top = 2
theme_override_constants/margin_right = 2
theme_override_constants/margin_bottom = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Control/HBoxContainer/OreAmount/Button3/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 1

[node name="Icon" type="TextureRect" parent="Control/HBoxContainer/OreAmount/Button3/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(6, 5)
layout_mode = 2
size_flags_vertical = 8
texture = ExtResource("5_plp2v")
expand_mode = 1

[node name="Price" type="Label" parent="Control/HBoxContainer/OreAmount/Button3/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_vertical = 8
theme_override_font_sizes/font_size = 3
text = "1"

[node name="Sprite" type="AnimatedSprite2D" parent="."]
material = SubResource("ShaderMaterial_jccku")
sprite_frames = SubResource("SpriteFrames_yybav")
animation = &"idle"
autoplay = "idle"

[node name="Build_collision" type="CollisionShape2D" parent="."]
position = Vector2(0, 16)
shape = SubResource("RectangleShape2D_kdblc")

[node name="generator_area" type="Area2D" parent="."]
position = Vector2(0, 9)
collision_mask = 9
gravity_space_override = 1
gravity_point = true
gravity_point_center = Vector2(0, 0)
gravity_direction = Vector2(0, 0)
gravity = 50.0

[node name="Area_collision" type="CollisionShape2D" parent="generator_area"]
position = Vector2(0, 8)
scale = Vector2(2.76, 2.76)
shape = SubResource("CircleShape2D_opvtb")
debug_color = Color(0.805252, 0.371615, 0.499287, 0.42)

[node name="Buildup_area" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 8
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Buildup_area"]
position = Vector2(-0.5, 16)
scale = Vector2(2.636, 2.636)
shape = SubResource("RectangleShape2D_plp2v")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
libraries = {
&"": SubResource("AnimationLibrary_dufph")
}

[node name="Kd_Timer" type="Timer" parent="."]
one_shot = true

[node name="ProgressBar" type="ProgressBar" parent="."]
visible = false
z_index = 1
offset_left = -32.0
offset_top = 48.0
offset_right = 32.0
offset_bottom = 54.0
theme_override_styles/background = SubResource("StyleBoxFlat_jccku")
theme_override_styles/fill = SubResource("StyleBoxFlat_b5xoo")
value = 29.26
show_percentage = false

[node name="HealingTimer" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[connection signal="pressed" from="Control/HBoxContainer/LaserDamage/Button" to="Control" method="_on_button_pressed"]
[connection signal="pressed" from="Control/HBoxContainer/TurretDamage/Button2" to="Control" method="_on_button_2_pressed"]
[connection signal="pressed" from="Control/HBoxContainer/OreAmount/Button3" to="Control" method="_on_button_3_pressed"]
[connection signal="body_entered" from="generator_area" to="." method="_on_generator_area_body_entered"]
[connection signal="body_exited" from="generator_area" to="." method="_on_generator_area_body_exited"]
[connection signal="body_entered" from="Buildup_area" to="." method="_on_buildup_area_body_entered"]
[connection signal="timeout" from="Kd_Timer" to="." method="_on_kd_timer_timeout"]
[connection signal="timeout" from="HealingTimer" to="." method="_on_healing_timer_timeout"]
